--- a/simple_tasks/apps/todo/templates/todo/todo_list.html
+++ b/simple_tasks/apps/todo/templates/todo/todo_list.html
@@ -1,6 +1,18 @@
 {% extends 'base.html' %}
 
 {% block content %}
-to-do list
+
+<div class="container">
+    <br>
+</div>
+
+<div class="card bg-light mb-3" style="max-width: 18rem;">
+  <div class="card-header">Автор</div>
+  <div class="card-body">
+    <h5 class="card-title">Заголовок</h5>
+    <p class="card-text">Описание карточки</p>
+  </div>
+</div>
+
 
 {% endblock content %}
