Created main list of todoes and detailed list of todoes

--- a/simple_tasks/apps/todo/templates/base.html
+++ b/simple_tasks/apps/todo/templates/base.html
@@ -12,12 +12,22 @@
 <div class="container">
   <nav class="navbar navbar-light" style="background-color: #87CEFA;">
     <a class="navbar-brand" href="#"><span class="text-white">TO-DO</span></a>
+
+      <a href="{% url 'todo:todo_create' %}" role="button">
+          <button type="button" class="btn btn-success">
+              Создать
+          </button>
+      </a>
   </nav>
 </div>
 
 <div class="container">
     <div class="row">
     </div>
+</div>
+
+<div class="container">
+    <br>
 </div>
 
 <div class="container">
