--- a/simple_tasks/apps/todo/templates/todo/todo_list.html
+++ b/simple_tasks/apps/todo/templates/todo/todo_list.html
@@ -2,17 +2,17 @@
 
 {% block content %}
 
-<div class="container">
-    <br>
-</div>
-
+{% for note in all_notes %}
 <div class="card bg-light mb-3" style="max-width: 18rem;">
-  <div class="card-header">Автор</div>
+  <div class="card-header">
+    {{note.author}}
+  </div>
   <div class="card-body">
-    <h5 class="card-title">Заголовок</h5>
-    <p class="card-text">Описание карточки</p>
+      <a href = "{% url "todo:todo_detail" note.id %}">
+    <h5 class="card-title">{{note.title}}</h5>
+    <p class="card-text">{{note.text}}</p>
+      </a>
   </div>
 </div>
-
-
+{% endfor %}
 {% endblock content %}
