--- a/simple_tasks/apps/todo/templates/base.html
+++ b/simple_tasks/apps/todo/templates/base.html
@@ -11,7 +11,7 @@
 
 <div class="container">
   <nav class="navbar navbar-light" style="background-color: #87CEFA;">
-    <a class="navbar-brand" href="#"><span class="text-white">TO-DO</span></a>
+    <a class="navbar-brand" href="{% url 'todo:home' %}"><span class="text-white">TO-DO</span></a>
 
       <a href="{% url 'todo:todo_create' %}" role="button">
           <button type="button" class="btn btn-success">
